--- a/docs/team/peijunwei.adoc
+++ b/docs/team/peijunwei.adoc
@@ -8,8 +8,8 @@ Weaver is a desktop address book application used for CS2103T Software
  Engineering Project. The user interacts with it using a CLI, and it has
   a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
-*Code contributed*:
- [https://github.com/CS2103AUG2017-W13-B2/main/blob/master/collated/main/pjunwei95.md[Functional code]]
+*Code contributed*: +
+ [https://github.com/CS2103AUG2017-W13-B2/main/blob/master/collated/main/pjunwei95.md[Functional code]] +
  [https://github.com/CS2103AUG2017-W13-B2/main/blob/master/collated/test/pjunwei95.md[Test code]]
 
 === Enhancement Added: Deleting a person's tag
@@ -42,6 +42,9 @@ include::../DeveloperGuide.adoc[tag=deletepersontag]
 #End of Extract#
 
 ---
+
+<<<
+
 === Enhancement Added: Locating persons by tag
 
 ==== External behavior
@@ -63,7 +66,10 @@ and find the tags as a result. This also remove the need for a favourite contact
 as the user just need to tag the address as "favourite" and find that tag.
 
 ---
-=== Enhancement Proposed: Auto-completion
+
+<<<
+
+=== Enhancement Added: Auto-completion
 
 ==== External behavior
 
@@ -82,7 +88,10 @@ Typing all the commands out can be a hassle, so this implementation of the auto-
 function allows the user to select frequently used commands with convenience.
 
 ---
-=== Enhancement Proposed: Clearing all entries
+
+<<<
+
+=== Enhancement Added: Clearing all entries
 
 ==== External behavior
 
@@ -104,7 +113,10 @@ clear their contacts. This seeks to remedy this problem by providing a confirmat
 popup to allow the user the option to consider before clearing their contacts.
 
 ---
-=== Enhancement Proposed: Backing up your Weaver
+
+<<<
+
+=== Enhancement Added: Backing up your Weaver
 
 ==== External behavior
 
@@ -124,6 +136,8 @@ user may want to back up his/her copy just in case. This feature allows the addi
 functionality to backup in a file that is identifiable to the user.
 
 ---
+
+<<<
 
 === Other contributions
 
