update of documents

--- a/docs/team/yangminxing.adoc
+++ b/docs/team/yangminxing.adoc
@@ -3,12 +3,14 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
+This portfolio highlights my contributions to the project when studying in School of Computing, National University of Singapore.
+
 == Project: Weaver
 Weaver is a desktop address book application meant for NUS students. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
 
 *Code contributed*: [https://github.com/CS2103AUG2017-W13-B2/main/blob/master/collated/main/yangminxingnus.md[Code contributed]] [https://github.com/CS2103AUG2017-W13-B2/main/blob/master/collated/test/yangminxingnus.md[Test code]]
 
-=== Enhancement Added: Remark(modulist)
+=== Enhancement Added: Remark
 
 ==== External behavior
 
@@ -80,7 +82,7 @@ include::../UserGuide.adoc[tag=register]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+With the register feature, user can create new accounts and login to use seperate files.
 
 ==== Implementation
 
@@ -95,17 +97,65 @@ include::../DeveloperGuide.adoc[tag=register]
 
 === Enhancement Added but not used: Encryption/Decryption
 
-#Start of Extract [from: Developer Guide]#
 
 include::../DeveloperGuide.adoc[tag=encrypt]
 
-#End of Extract#
+
+---
+
+=== Enhancement Proposed: Future Implementations
+
+* These are the enhancements proposed for the future Weaver v2.0 release.
+* It is written
+as user stories.
+They are sorted by priorities and arranged in a table below:
+
+Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (unlikely to have) - `*`
+
+[width="59%",cols="22%,<23%,<25%,<30%",options="header"]
+|=======================================================================
+|Priority |As a ... |I want to ... |So that I can...
+|`*`|user |be notified of birthdays |send them well wishes
+
+|`*`|user |log in |access privately
+
+|`*`|user |customise the display |view the list to my preference
+
+|`*`|user |delete people with a specific tag |clean up my list
+
+|`* *`|user with frequent contacts |have a favourites list |find them easily
+
+|`* *`|user |see a history bar |keep track of my previous searches
+
+|`* *`|user |see random people on the front page |get in touch with old friends
+
+|`* * *`|user |confirm before clearing |not clear the contents accidentally
+
+|`* * *`|user |edit a person |modify an address conveniently
+
+|`* * *`|user |encrypt / decrypt my file |keep my file secure yet editable
+
+|=======================================================================
 
 ---
 
 === Other contributions
 
-* Wrote additional tests to increase coverage, finally up to 84.24.
+* Wrote additional tests to increase coverage. +
+(pull request:
+https://github.com/CS2103AUG2017-W13-B2/main/pull/115[#115]
+https://github.com/CS2103AUG2017-W13-B2/main/pull/133[#133])
+* Suggestion on addressbook software. +
+(issue: https://github.com/nus-cs2103-AY1718S1/forum/issues/217[#217])
+* Bug reported to other teams.
+(issues: https://github.com/CS2103AUG2017-T14-B3/main/issues/82[#82])
 * Made enhancements on coding styles: javadoc, uppercase / lowercase, refactoring of static variables,
-optinal fileds in add commands, remove of redundant testcase and unused codes.
-* Made optimization on UI, mainlly on login page and register page.
+optional fields in add commands, remove of redundant testcase and unused codes.
+(pull request:
+https://github.com/CS2103AUG2017-W13-B2/main/pull/78[#78],
+https://github.com/CS2103AUG2017-W13-B2/main/pull/83[#83])
+* Made optimization on UI, mainly on login page and register page.
+(pull request:
+https://github.com/CS2103AUG2017-W13-B2/main/pull/41[#41],
+https://github.com/CS2103AUG2017-W13-B2/main/pull/78[#78]
+)
