--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -890,19 +890,18 @@ any directory. +
 === FaceBook Integration
 
 ** The facebook command helps the user to view the profile page of a person on the contact list. +
-** It requires the user to login to his/her account before they can view the profile page.The profile +
-page is shown up on the browser panel.
-** If the user has no username the facebook page will not be loaded in the browser panel. +
+** If the user has no username the facebook page will not be loaded in the browser panel and an exception will be thrown. +
+** The command takes in one argument which is the index of the person. +
 
-** FORMAT - `facebook [INDEX]`
-
-e.g. - `facebook 1`
 
 ==== Working flow
 
-The `FaceBookCommand Parser` class parses the arguments and throws an exception if the index entered
-is invalid. A new event `handleFaceBookEvent`  is then raised.
-The Brower Panel class then loads the page with the url of the profile page to be viewed on Facebook. +
+** The `FaceBookCommand Parser` class parses the argument and throws an exception if the index entered
+is invalid. +
+** A new event `handleFaceBookEvent`  is then raised. +
+** The Brower Panel class then loads the page with the url of the profile page to be viewed on Facebook. +
+
+Below are few code snippets to guide you through the working of the feature. +
 
 ---
  public void loadPersonFaceBookPage(ReadOnlyPerson person, String username) {
@@ -913,8 +912,11 @@ loadPage(url);
 ---
 
 image::FaceBookSequence.png[width="800"]
+Figure 3.1
 
-Above is the sequence diagram. +
+** Refer to figure 3.1 above which shows the sequence diagram of the Facebook command. +
+It clearly demonstrates how the command interacts with the Logic, Model and UI components. +
+It also shows how the event is raised and hence the page is loaded in the browser panel. +
 
 
 
@@ -924,11 +926,14 @@ Above is the sequence diagram. +
 
 * It is better than opening a brower on the desktop. +
 
+* It does not require the user to search for the person on the facebook homepage which can be a tedious task. +
+
+
 ==== Design Considerations
 
 **Aspect:** How should the user view the profile page. +
 **Alternative1 : ** View the profile page on a web browser +
-**Pros:** Helps user exercise other functionalities like messaging. +
+**Pros:** Helps user exercise other functionalities like using messenger. +
 **Cons:** Does not make use of Weaver in any useful way. +
 **Alternative2:** View the profile page on the browser panel. +
 **Pros:** Makes it quicker and adds a fucntion to the personalised Weaver. +
